# BrAIniac

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.test.yaml  docker-compose.yaml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
MCP/.specify/: init-options.json
backend/: .dockerignore  Dockerfile  README.md  afsd.go  api.proto  buf.gen.yaml  entrypoint.sh  go.mod  go.sum  jmeter-auth-full-scenarios.jmx  jmeter-auth-load-test.jmx  package-lock.json  package.json  server.go  tsconfig.json
docs/: deploy-checklist.md  local-dev.md  math_evaluation_draft.md  math_formulation_draft.md  math_metric_catalog_draft.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
judge-eval-worker/: Dockerfile  pyproject.toml
judge-eval-worker/app/: main.py
judge-eval-worker/app/api/: metrics.py
judge-eval-worker/app/contracts/: schemas.py
judge-eval-worker/app/metrics/: detoxify_adapter.py  nli_adapter.py  ragas_adapter.py  registry.py  rubric_adapter.py
judge-eval-worker/tests/: test_metrics_golden.py
vscode-extension/: README.md  brainiac-vscode-mcp-0.1.0.vsix  brainiac-vscode-mcp-0.1.1.vsix  brainiac-vscode-mcp-0.1.2.vsix  package-lock.json  package.json  tsconfig.json
(+480 files in other folders)
