[project]
name = "judge-eval-worker"
version = "0.1.0"
description = "Python sidecar for BrAIniac judge: Ragas / DeepEval / Detoxify / NLI metrics"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.8",
    "httpx>=0.27",
    "numpy>=1.26",
    "ragas>=0.2",
    "deepeval>=1.0",
    "detoxify>=0.5",
    "sentence-transformers>=3.0",
    "transformers>=4.44",
    "torch>=2.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
